# asentrx-trade-decision-engine

./: .dockerignore  .env-example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
app/: config.py  expectations.json  main.py  models.py
app/ai/agents/: fed_decision_agent.py  social_media_agent.py
app/trading/: bitfinex_trader.py  trade_decision_manager.py  trader.py
app/utils/: __init__.py  logger_config.py  sms_notifier.py  status_parser.py
dotenv/: __init__.py
tests/: conftest.py
tests/e2e/: .env.test-example  test_e2e_fed_decision_flow.py  test_e2e_live_llm.py  test_e2e_social_media_flow.py
tests/testdata/: dovish-001.json  hawkish-001.json  hawkish-002.json  mixed-001.json  neutral-001.json  ts_bitcoin_bullish.json  ts_tariffs_hawkish.json
tests/testdata/de/: dovish-001_de.json  hawkish-002_de.json  mixed-001_de.json  neutral-001_de.json
tests/unit/ai/: test_fed_decision_agent.py  test_social_media_agent.py
tests/unit/api/: test_main_api.py
tests/unit/trading/: test_trade_decision_manager.py  test_trade_decision_manager_social.py
